--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,10 @@ CMakeLists.txt
 # docker
 bfdocker.sh
 
+# Python environment
 .mypy_cache/
 .venv/
+
+# There are two possible Makefile to use. One uses Podman, the other uses
+# Docker. Please set up a symbolic link to the file that suits your needs.
+Makefile
